// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakdown when data is loaded returns the transaction breakdown for a service 1`] = `
Object {
  "timeseries": Array [
    Object {
      "color": "#54b399",
      "data": Array [
        Object {
          "x": 1600159980000,
          "y": null,
        },
        Object {
          "x": 1600160010000,
          "y": null,
        },
        Object {
          "x": 1600160040000,
          "y": null,
        },
        Object {
          "x": 1600160070000,
          "y": 1,
        },
        Object {
          "x": 1600160100000,
          "y": 0.1875,
        },
        Object {
          "x": 1600160130000,
          "y": 0.2625,
        },
        Object {
          "x": 1600160160000,
          "y": null,
        },
        Object {
          "x": 1600160190000,
          "y": 0.4827586206896552,
        },
        Object {
          "x": 1600160220000,
          "y": 0.44,
        },
        Object {
          "x": 1600160250000,
          "y": 1,
        },
        Object {
          "x": 1600160280000,
          "y": null,
        },
        Object {
          "x": 1600160310000,
          "y": 0.17142857142857143,
        },
        Object {
          "x": 1600160340000,
          "y": 0.55,
        },
        Object {
          "x": 1600160370000,
          "y": 0.5,
        },
        Object {
          "x": 1600160400000,
          "y": null,
        },
        Object {
          "x": 1600160430000,
          "y": 0.41964285714285715,
        },
        Object {
          "x": 1600160460000,
          "y": 0.7222222222222222,
        },
        Object {
          "x": 1600160490000,
          "y": 0.8333333333333334,
        },
        Object {
          "x": 1600160520000,
          "y": null,
        },
        Object {
          "x": 1600160550000,
          "y": null,
        },
        Object {
          "x": 1600160580000,
          "y": 0.11044776119402985,
        },
        Object {
          "x": 1600160610000,
          "y": null,
        },
        Object {
          "x": 1600160640000,
          "y": null,
        },
        Object {
          "x": 1600160670000,
          "y": 0.15028901734104047,
        },
        Object {
          "x": 1600160700000,
          "y": 0.38095238095238093,
        },
        Object {
          "x": 1600160730000,
          "y": 0.06761565836298933,
        },
        Object {
          "x": 1600160760000,
          "y": null,
        },
        Object {
          "x": 1600160790000,
          "y": 0.26373626373626374,
        },
        Object {
          "x": 1600160820000,
          "y": null,
        },
        Object {
          "x": 1600160850000,
          "y": 0.5294117647058824,
        },
        Object {
          "x": 1600160880000,
          "y": null,
        },
        Object {
          "x": 1600160910000,
          "y": 0.012096774193548387,
        },
        Object {
          "x": 1600160940000,
          "y": 0.26126126126126126,
        },
        Object {
          "x": 1600160970000,
          "y": null,
        },
        Object {
          "x": 1600161000000,
          "y": null,
        },
        Object {
          "x": 1600161030000,
          "y": 0.16071428571428573,
        },
        Object {
          "x": 1600161060000,
          "y": 0.040268456375838924,
        },
        Object {
          "x": 1600161090000,
          "y": 1,
        },
        Object {
          "x": 1600161120000,
          "y": null,
        },
        Object {
          "x": 1600161150000,
          "y": 0.07894736842105263,
        },
        Object {
          "x": 1600161180000,
          "y": 0.4074074074074074,
        },
        Object {
          "x": 1600161210000,
          "y": null,
        },
        Object {
          "x": 1600161240000,
          "y": null,
        },
        Object {
          "x": 1600161270000,
          "y": 0.6666666666666666,
        },
        Object {
          "x": 1600161300000,
          "y": 0.8214285714285714,
        },
        Object {
          "x": 1600161330000,
          "y": 1,
        },
        Object {
          "x": 1600161360000,
          "y": null,
        },
        Object {
          "x": 1600161390000,
          "y": 0.17333333333333334,
        },
        Object {
          "x": 1600161420000,
          "y": 0.14285714285714285,
        },
        Object {
          "x": 1600161450000,
          "y": 0.85,
        },
        Object {
          "x": 1600161480000,
          "y": null,
        },
        Object {
          "x": 1600161510000,
          "y": 0.42105263157894735,
        },
        Object {
          "x": 1600161540000,
          "y": null,
        },
        Object {
          "x": 1600161570000,
          "y": null,
        },
        Object {
          "x": 1600161600000,
          "y": null,
        },
        Object {
          "x": 1600161630000,
          "y": null,
        },
        Object {
          "x": 1600161660000,
          "y": 0.018518518518518517,
        },
        Object {
          "x": 1600161690000,
          "y": 0.0625,
        },
        Object {
          "x": 1600161720000,
          "y": null,
        },
        Object {
          "x": 1600161750000,
          "y": 0.36764705882352944,
        },
        Object {
          "x": 1600161780000,
          "y": 0.10526315789473684,
        },
      ],
      "hideLegend": false,
      "legendValue": "23%",
      "title": "app",
      "type": "areaStacked",
    },
    Object {
      "color": "#6092c0",
      "data": Array [
        Object {
          "x": 1600159980000,
          "y": null,
        },
        Object {
          "x": 1600160010000,
          "y": null,
        },
        Object {
          "x": 1600160040000,
          "y": null,
        },
        Object {
          "x": 1600160070000,
          "y": 0,
        },
        Object {
          "x": 1600160100000,
          "y": 0.71875,
        },
        Object {
          "x": 1600160130000,
          "y": 0.4875,
        },
        Object {
          "x": 1600160160000,
          "y": null,
        },
        Object {
          "x": 1600160190000,
          "y": 0.41379310344827586,
        },
        Object {
          "x": 1600160220000,
          "y": 0,
        },
        Object {
          "x": 1600160250000,
          "y": 0,
        },
        Object {
          "x": 1600160280000,
          "y": null,
        },
        Object {
          "x": 1600160310000,
          "y": 0.6285714285714286,
        },
        Object {
          "x": 1600160340000,
          "y": 0,
        },
        Object {
          "x": 1600160370000,
          "y": 0.5,
        },
        Object {
          "x": 1600160400000,
          "y": null,
        },
        Object {
          "x": 1600160430000,
          "y": 0.4375,
        },
        Object {
          "x": 1600160460000,
          "y": 0,
        },
        Object {
          "x": 1600160490000,
          "y": 0,
        },
        Object {
          "x": 1600160520000,
          "y": null,
        },
        Object {
          "x": 1600160550000,
          "y": null,
        },
        Object {
          "x": 1600160580000,
          "y": 0.8895522388059701,
        },
        Object {
          "x": 1600160610000,
          "y": null,
        },
        Object {
          "x": 1600160640000,
          "y": null,
        },
        Object {
          "x": 1600160670000,
          "y": 0.7052023121387283,
        },
        Object {
          "x": 1600160700000,
          "y": 0,
        },
        Object {
          "x": 1600160730000,
          "y": 0.8718861209964412,
        },
        Object {
          "x": 1600160760000,
          "y": null,
        },
        Object {
          "x": 1600160790000,
          "y": 0.6703296703296703,
        },
        Object {
          "x": 1600160820000,
          "y": null,
        },
        Object {
          "x": 1600160850000,
          "y": 0,
        },
        Object {
          "x": 1600160880000,
          "y": null,
        },
        Object {
          "x": 1600160910000,
          "y": 0.9879032258064516,
        },
        Object {
          "x": 1600160940000,
          "y": 0.7387387387387387,
        },
        Object {
          "x": 1600160970000,
          "y": null,
        },
        Object {
          "x": 1600161000000,
          "y": null,
        },
        Object {
          "x": 1600161030000,
          "y": 0.7946428571428571,
        },
        Object {
          "x": 1600161060000,
          "y": 0.959731543624161,
        },
        Object {
          "x": 1600161090000,
          "y": 0,
        },
        Object {
          "x": 1600161120000,
          "y": null,
        },
        Object {
          "x": 1600161150000,
          "y": 0.9210526315789473,
        },
        Object {
          "x": 1600161180000,
          "y": 0,
        },
        Object {
          "x": 1600161210000,
          "y": null,
        },
        Object {
          "x": 1600161240000,
          "y": null,
        },
        Object {
          "x": 1600161270000,
          "y": 0,
        },
        Object {
          "x": 1600161300000,
          "y": 0,
        },
        Object {
          "x": 1600161330000,
          "y": 0,
        },
        Object {
          "x": 1600161360000,
          "y": null,
        },
        Object {
          "x": 1600161390000,
          "y": 0.7466666666666667,
        },
        Object {
          "x": 1600161420000,
          "y": 0.8571428571428571,
        },
        Object {
          "x": 1600161450000,
          "y": 0,
        },
        Object {
          "x": 1600161480000,
          "y": null,
        },
        Object {
          "x": 1600161510000,
          "y": 0.5789473684210527,
        },
        Object {
          "x": 1600161540000,
          "y": null,
        },
        Object {
          "x": 1600161570000,
          "y": null,
        },
        Object {
          "x": 1600161600000,
          "y": null,
        },
        Object {
          "x": 1600161630000,
          "y": null,
        },
        Object {
          "x": 1600161660000,
          "y": 0.9814814814814815,
        },
        Object {
          "x": 1600161690000,
          "y": 0.9375,
        },
        Object {
          "x": 1600161720000,
          "y": null,
        },
        Object {
          "x": 1600161750000,
          "y": 0.5588235294117647,
        },
        Object {
          "x": 1600161780000,
          "y": 0.8947368421052632,
        },
      ],
      "hideLegend": false,
      "legendValue": "68%",
      "title": "http",
      "type": "areaStacked",
    },
    Object {
      "color": "#d36086",
      "data": Array [
        Object {
          "x": 1600159980000,
          "y": null,
        },
        Object {
          "x": 1600160010000,
          "y": null,
        },
        Object {
          "x": 1600160040000,
          "y": null,
        },
        Object {
          "x": 1600160070000,
          "y": 0,
        },
        Object {
          "x": 1600160100000,
          "y": 0.09375,
        },
        Object {
          "x": 1600160130000,
          "y": 0.25,
        },
        Object {
          "x": 1600160160000,
          "y": null,
        },
        Object {
          "x": 1600160190000,
          "y": 0.10344827586206896,
        },
        Object {
          "x": 1600160220000,
          "y": 0.56,
        },
        Object {
          "x": 1600160250000,
          "y": 0,
        },
        Object {
          "x": 1600160280000,
          "y": null,
        },
        Object {
          "x": 1600160310000,
          "y": 0.2,
        },
        Object {
          "x": 1600160340000,
          "y": 0.45,
        },
        Object {
          "x": 1600160370000,
          "y": 0,
        },
        Object {
          "x": 1600160400000,
          "y": null,
        },
        Object {
          "x": 1600160430000,
          "y": 0.14285714285714285,
        },
        Object {
          "x": 1600160460000,
          "y": 0.2777777777777778,
        },
        Object {
          "x": 1600160490000,
          "y": 0.16666666666666666,
        },
        Object {
          "x": 1600160520000,
          "y": null,
        },
        Object {
          "x": 1600160550000,
          "y": null,
        },
        Object {
          "x": 1600160580000,
          "y": 0,
        },
        Object {
          "x": 1600160610000,
          "y": null,
        },
        Object {
          "x": 1600160640000,
          "y": null,
        },
        Object {
          "x": 1600160670000,
          "y": 0.14450867052023122,
        },
        Object {
          "x": 1600160700000,
          "y": 0.6190476190476191,
        },
        Object {
          "x": 1600160730000,
          "y": 0.060498220640569395,
        },
        Object {
          "x": 1600160760000,
          "y": null,
        },
        Object {
          "x": 1600160790000,
          "y": 0.06593406593406594,
        },
        Object {
          "x": 1600160820000,
          "y": null,
        },
        Object {
          "x": 1600160850000,
          "y": 0.47058823529411764,
        },
        Object {
          "x": 1600160880000,
          "y": null,
        },
        Object {
          "x": 1600160910000,
          "y": 0,
        },
        Object {
          "x": 1600160940000,
          "y": 0,
        },
        Object {
          "x": 1600160970000,
          "y": null,
        },
        Object {
          "x": 1600161000000,
          "y": null,
        },
        Object {
          "x": 1600161030000,
          "y": 0.044642857142857144,
        },
        Object {
          "x": 1600161060000,
          "y": 0,
        },
        Object {
          "x": 1600161090000,
          "y": 0,
        },
        Object {
          "x": 1600161120000,
          "y": null,
        },
        Object {
          "x": 1600161150000,
          "y": 0,
        },
        Object {
          "x": 1600161180000,
          "y": 0.5925925925925926,
        },
        Object {
          "x": 1600161210000,
          "y": null,
        },
        Object {
          "x": 1600161240000,
          "y": null,
        },
        Object {
          "x": 1600161270000,
          "y": 0.3333333333333333,
        },
        Object {
          "x": 1600161300000,
          "y": 0.17857142857142858,
        },
        Object {
          "x": 1600161330000,
          "y": 0,
        },
        Object {
          "x": 1600161360000,
          "y": null,
        },
        Object {
          "x": 1600161390000,
          "y": 0.08,
        },
        Object {
          "x": 1600161420000,
          "y": 0,
        },
        Object {
          "x": 1600161450000,
          "y": 0.15,
        },
        Object {
          "x": 1600161480000,
          "y": null,
        },
        Object {
          "x": 1600161510000,
          "y": 0,
        },
        Object {
          "x": 1600161540000,
          "y": null,
        },
        Object {
          "x": 1600161570000,
          "y": null,
        },
        Object {
          "x": 1600161600000,
          "y": null,
        },
        Object {
          "x": 1600161630000,
          "y": null,
        },
        Object {
          "x": 1600161660000,
          "y": 0,
        },
        Object {
          "x": 1600161690000,
          "y": 0,
        },
        Object {
          "x": 1600161720000,
          "y": null,
        },
        Object {
          "x": 1600161750000,
          "y": 0.07352941176470588,
        },
        Object {
          "x": 1600161780000,
          "y": 0,
        },
      ],
      "hideLegend": false,
      "legendValue": "9.3%",
      "title": "postgresql",
      "type": "areaStacked",
    },
  ],
}
`;

exports[`Breakdown when data is loaded returns the transaction breakdown for a transaction group 9`] = `
Array [
  Object {
    "x": 1600159980000,
    "y": null,
  },
  Object {
    "x": 1600160010000,
    "y": null,
  },
  Object {
    "x": 1600160040000,
    "y": null,
  },
  Object {
    "x": 1600160070000,
    "y": null,
  },
  Object {
    "x": 1600160100000,
    "y": 1,
  },
  Object {
    "x": 1600160130000,
    "y": 1,
  },
  Object {
    "x": 1600160160000,
    "y": null,
  },
  Object {
    "x": 1600160190000,
    "y": 1,
  },
  Object {
    "x": 1600160220000,
    "y": null,
  },
  Object {
    "x": 1600160250000,
    "y": null,
  },
  Object {
    "x": 1600160280000,
    "y": null,
  },
  Object {
    "x": 1600160310000,
    "y": 1,
  },
  Object {
    "x": 1600160340000,
    "y": null,
  },
  Object {
    "x": 1600160370000,
    "y": 1,
  },
  Object {
    "x": 1600160400000,
    "y": null,
  },
  Object {
    "x": 1600160430000,
    "y": 1,
  },
  Object {
    "x": 1600160460000,
    "y": null,
  },
  Object {
    "x": 1600160490000,
    "y": null,
  },
  Object {
    "x": 1600160520000,
    "y": null,
  },
  Object {
    "x": 1600160550000,
    "y": null,
  },
  Object {
    "x": 1600160580000,
    "y": 1,
  },
  Object {
    "x": 1600160610000,
    "y": null,
  },
  Object {
    "x": 1600160640000,
    "y": null,
  },
  Object {
    "x": 1600160670000,
    "y": 1,
  },
  Object {
    "x": 1600160700000,
    "y": null,
  },
  Object {
    "x": 1600160730000,
    "y": 1,
  },
  Object {
    "x": 1600160760000,
    "y": null,
  },
  Object {
    "x": 1600160790000,
    "y": 1,
  },
  Object {
    "x": 1600160820000,
    "y": null,
  },
  Object {
    "x": 1600160850000,
    "y": null,
  },
  Object {
    "x": 1600160880000,
    "y": null,
  },
  Object {
    "x": 1600160910000,
    "y": 1,
  },
  Object {
    "x": 1600160940000,
    "y": 1,
  },
  Object {
    "x": 1600160970000,
    "y": null,
  },
  Object {
    "x": 1600161000000,
    "y": null,
  },
  Object {
    "x": 1600161030000,
    "y": 1,
  },
  Object {
    "x": 1600161060000,
    "y": 1,
  },
  Object {
    "x": 1600161090000,
    "y": null,
  },
  Object {
    "x": 1600161120000,
    "y": null,
  },
  Object {
    "x": 1600161150000,
    "y": 1,
  },
  Object {
    "x": 1600161180000,
    "y": null,
  },
  Object {
    "x": 1600161210000,
    "y": null,
  },
  Object {
    "x": 1600161240000,
    "y": null,
  },
  Object {
    "x": 1600161270000,
    "y": null,
  },
  Object {
    "x": 1600161300000,
    "y": null,
  },
  Object {
    "x": 1600161330000,
    "y": null,
  },
  Object {
    "x": 1600161360000,
    "y": null,
  },
  Object {
    "x": 1600161390000,
    "y": 1,
  },
  Object {
    "x": 1600161420000,
    "y": 1,
  },
  Object {
    "x": 1600161450000,
    "y": null,
  },
  Object {
    "x": 1600161480000,
    "y": null,
  },
  Object {
    "x": 1600161510000,
    "y": 1,
  },
  Object {
    "x": 1600161540000,
    "y": null,
  },
  Object {
    "x": 1600161570000,
    "y": null,
  },
  Object {
    "x": 1600161600000,
    "y": null,
  },
  Object {
    "x": 1600161630000,
    "y": null,
  },
  Object {
    "x": 1600161660000,
    "y": 1,
  },
  Object {
    "x": 1600161690000,
    "y": 1,
  },
  Object {
    "x": 1600161720000,
    "y": null,
  },
  Object {
    "x": 1600161750000,
    "y": 1,
  },
  Object {
    "x": 1600161780000,
    "y": 1,
  },
]
`;
